--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /Assets/Roguelike2D
 /Assets/Roguelike2D.meta
+/Assets/TextMesh Pro
+/Assets/TextMesh Pro.meta
